# donatik-tube

./: .dockerignore  .env.example  .gitignore  .terraformignore  README.md  Taskfile.yml  pyproject.toml
docker/: .env.example  Dockerfile.worker  docker-compose.yml
docker/cloud-sql-auth/: README.md
docker/nginx/: nginx.conf
docker/nginx/conf.d/: youtube_push.conf
scripts/: demo.py  demo2.py  init_db.py
src/: main.py
src/config/: __init__.py  settings.py
src/overlay_api/: __init__.py  app.py  youtube.py
src/stream_workers/: __init__.py  db.py  demux.py  encode.py  overlay.py  pts_dts.py  rtmp_out.py
terraform/: main.tf  versions.tf
terraform/environments/prod/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/cloud-sql/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/youtube-secrets/: main.tf  outputs.tf  variables.tf
tests/: __init__.py  test_placeholder.py
